--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,12 @@
 	<meta charset="utf-8">
 	<title>cped-org-tree-v2</title>
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.21.0/skin-lion/ui.fancytree.min.css">
+	<style>
+		ul.fancytree-container ul {
+			padding: 0 0 0 41px;
+			margin: 0;
+		}
+	</style>
 </head>
 
 <body>
