set title for cped-org

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>cped-org-tree-v2</title>
+	<title>2016 年底軍事改革後解放軍組織圖</title>
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.21.0/skin-lion/ui.fancytree.min.css">
 	<style>
 		ul.fancytree-container ul {
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
